# WebRTC-video-backend

./: .gitignore  .gitmodules  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  rtcServer.cbp
src/: CMakeLists.txt
src/WebRTCsrc/include/webrtc/api/: peerconnectioninterface.h
src/WebRTCsrc/include/webrtc/base/: event.h  platform_file.h
src/WebRTCsrc/lib/x64/Debug/pkgconfig/: libwebrtc_full.pc
src/WebRTCsrc/lib/x64/Release/pkgconfig/: libwebrtc_full.pc
src/WebSocketRTC/include/: WebRTCConnection.hpp  WebsocketServer.hpp
